# bnanw

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  build_wasm.py  copypkg.py  rustfmt.toml
pkgBk/: bnanw.d.ts  bnanw.js  bnanw_bg.wasm  bnanw_bg.wasm.d.ts
src/: click.rs  lib.rs  manager.rs  util.rs
src/model/: boxs.rs  contents.rs  mod.rs  source.rs  stroke.rs  token.rs
src/view/: area.rs  canvas.rs  mod.rs  panel.rs  panel_board.rs  panel_box.rs  panel_contents.rs  panel_line.rs  panel_section.rs  panel_token.rs  scroll_bar.rs  view_line.rs
