[package]
name = "bnanw"
version = "0.2.0"
authors = ["Masahiro Nitta <mnitta220@gmail.com>"]
edition = "2018"
description = "文章暗記 WebAssembly プロジェクト"
repository = "https://github.com/mnitta220/bnanw"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
strum = "0.24"
strum_macros = "0.24"

[dependencies.web-sys]
version = "0.3.55"
features = [
	'Attr',
	'console',
	'Document',
	'DomTokenList',
	'Element',
	'HtmlElement',
	'NamedNodeMap',
	'Node',
	'NodeList',
	'Window',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'TextMetrics',
  'Storage',
	'FontFace',
	'FontFaceSet',
]
